--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1210,13 +1210,13 @@ a.newer-posts:hover {
   line-height: 1.3;
 }
 
-.header-page .page-date {
+/* .header-page .page-date {
   color: #a0a0a0;
   font-weight: 300;
   font-size: 12px;
   text-transform: uppercase;
 }
-
+ */
 .page-cover-image {
   position: relative;
   padding: 0;
