--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1150,11 +1150,11 @@ footer .copyright {
   width: 70%;
 }
 
-/* .post .post-content .post-date,
+.post .post-content .post-date,
 .post .post-content .post-words {
-  font-size: 12px;
+  font-size: 1px;
 }
- */
+
 .post .post-content .post-title {
   margin: 0 0 10px;
   font-size: 30px;
@@ -1210,13 +1210,13 @@ a.newer-posts:hover {
   line-height: 1.3;
 }
 
-/* .header-page .page-date {
-  color: #a0a0a0;
+.header-page .page-date {
+  color: #ffffff;
   font-weight: 300;
   font-size: 12px;
   text-transform: uppercase;
 }
- */
+
 .page-cover-image {
   position: relative;
   padding: 0;
